<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:layout_marginTop="8dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:context=".MapsActivity" />

    <TextView
        android:id="@+id/currentTargetText"
        android:layout_below="@id/map"
        android:layout_alignBaseline="@+id/addButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:text="@string/current_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/targetSpinner"
        android:layout_below="@id/map"
        android:layout_alignBottom="@+id/addButton"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@+id/addButton"
        android:entries="@array/userIdSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Spinner>

    <Button
        android:id="@+id/addButton"
        android:layout_below="@id/map"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentEnd="true"
        android:text="@string/addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/whereMyTarget"
        android:layout_below="@+id/addButton"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@+id/lookToTarget"
        android:layout_marginLeft="8dp"
        android:text="@string/where_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/myLocation"
        android:layout_below="@+id/addButton"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@+id/lookToTarget"
        android:text="@string/where_iam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/lookToTarget"
        android:layout_below="@+id/addButton"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentRight="true"
        android:text="@string/traectory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/statusText"
        android:layout_below="@+id/lookToTarget"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>